<resources>
    <string name="facebook_app_id">883641271728093</string>

    <string name="vk_app_id">4943940</string>


    <string name="app_name">Выручатель</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Эл. почта</string>
    <string name="password">Пароль</string>
    <string name="skip_password">Забыли пароль?</string>
    <string name="vkontakte">Вконтакте</string>
    <string name="facebook">Фейсбук</string>
    <string name="signin">Войти</string>
    <string name="dont_account">Еще нет аккаунта?</string>
    <string name="signup">Зарегистрироваться</string>

    <string name="need_help">Ждут помощи</string>
    <string name="messages">Сообщения</string>
    <string name="message">Сообщение</string>
    <string name="frends">Друзья</string>
    <string name="user_friends">Друзья пользователя</string>
    <string name="groups">Группы</string>
    <string name="user_groups">Состоит в группах</string>
    <string name="gps_tracer">GPS-трекер</string>
    <string name="profile">Мой профиль</string>
    <string name="user_profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="about">О программе</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main"></string>
    <string name="new_email">Укажите эл. почту, чтобы получить ссылку на страницу смены пароля</string>
    <string name="skip_pass">Восстановление пароля</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отменить</string>
    <string name="save">Сохранить</string>
    <string name="exit_group">Покинуть группу?</string>
    <string name="exit_group_msg">Вы действительно хотите покинуть группу</string>
    <string name="cancel2">Отмена</string>
    <string name="exit">Выйти</string>
    <string name="butt_end">Завершить</string>
    <string name="end_reg_title">Завершение регистрации</string>
    <string name="end_reg_msg">На вашу эл. почту выслана ссылка с кодом подтверждения. Для окончания регистрации перейдите по этой ссылке.</string>
    <string name="title_activity_change_pass">Смена пароля</string>
    <string name="title_activity_signup">Регистрация</string>

    <string name="old_pass">Старый пароль</string>
    <string name="new_pass">Новый пароль</string>
    <string name="new_pass_retry">Подтверждение пароля</string>
    <string name="fio">Имя и Фамилия</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="phone">Телефон</string>
    <string name="gps_link_message" >Если у вас уже есть GPS-трекер, укажите номер его сим-карты</string>
    <string name="gps_number">Номер сим-карты трекера</string>
    <string name="link_gps_number">Привязать GPS-трекер</string>
    <string name="gps_message" >Тревожная кнопка - GPS-трекер поможет оповестить и позвать друзей на помощь в трудной ситуации, не используя телефон</string>
    <string name="order">Заказать</string>
    <string name="link">Привязать</string>
    <string name="profile_photo">Фотография профиля</string>
    <string name="profile_data">Личные данные</string>
    <string name="link_fb_acc">Привязать аккаунт  Facebook</string>
    <string name="link_vk_acc">Привязать аккаунт  ВКонтакте</string>
    <string name="gps_number_2">Номер сим-карты тревожной кнопки</string>
    <string name="social_network">СОЦИАЛЬНЫЕ СЕТИ</string>
    <string name="account">АККАУНТ</string>
    <string name="my_friend">В друзьях</string>
    <string name="guest">Гость</string>
    <string name="no_need_help">Помощь никому не требуется</string>
    <string name="no_need_help_msg">Никто рядом не подал сигнала тревоги. Пригласите друзей, чтобы в нужных момент прийти им на помощь.</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="what_happening">Что произошло?</string>
    <string name="what_happening_msg">Описание ситуации</string>
    <string name="only_friends">Только друзьям</string>
    <string name="to_all">Всем</string>
    <string name="alarm_to">Тревога видна:</string>
    <string name="i_need_help">Попросить помощи</string>
    <string name="need_help_2">Требуется помощь</string>
    <string name="alarm_signal">Сигнал тревоги</string>
    <string name="title_activity_sos">SOSActivity</string>
    <string name="no_message">У вас нет сообщений</string>
    <string name="no_message_invate">Пригласите друзей, чтобы в нужных момент прийти им на помощь.</string>
    <string name="rating">Рейтинг:</string>
    <string name="in_top">В топе:</string>
    <string name="reviews">Отзывы</string>
    <string name="add_in_friends">Добавить в друзья</string>
    <string name="saves_me">Меня спасли</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="title_activity_maps">Map</string>
    <string name="close">Закрыть</string>
    <string name="more_info">Подробнее</string>
    <string name="invite">Пригласить</string>
    <string name="add">Добавить</string>
    <string name="accept">Принять</string>
    <string name="reject">Отклонить</string>
    <string name="apply">Установить</string>
    <string name="apply_guest_city">Установить гостевой город?</string>
    <string name="guest_city_message">Вы находитесь в городе Алапаевск. Установить этот город в качестве гостевого?</string>
    <string name="empty_review1">У вас еще нет отзывов.\\nДобавляйте друзей, помогайте друг другу и они это обязательно оценят</string>
    <string name="empty_review2">У пользователя еще нет отзывов</string>
    <string name="send_review">Оставить отзыв</string>
    <string name="accept_group">Вступить в группу</string>
    <string name="write">Написать</string>
    <string name="city">Город</string>
    <string name="street">Улица</string>
    <string name="house">Дом</string>
    <string name="user_info_message">Ваш адрес будет отбражаться только в сигналах о помощи, посланных с компьютера. В вашем профиле эта информация не будет доступна.</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="make_photo">Сделать снимок</string>
    <string name="choose_image">Выбрать изображение</string>
    <string name="you_review">Ваш отзыв</string>
    <string name="title_activity_social_login">SocialLoginActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="delete">Удалить</string>
    <string name="delete_from_friends">Удалить из друзей?</string>


</resources>
