<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip_pass"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_email"
        android:id="@+id/textView14"
        android:layout_gravity="center_horizontal"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_marginTop="24dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/ed_new_email"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:layout_marginTop="48dp"
        app:met_floatingLabel="normal"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="32dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/but_cancel"
            style="@style/transparent_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/but_send"
            android:textColor="@color/text_color1"
            style="@style/transparent_button" />
    </TableRow>
</LinearLayout>