<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_guest_city"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@color/color_black"
        style="@style/TextTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest_city_message"
        android:id="@+id/textView14"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:textColor="@color/text_color_gray"
        style="@style/TextBody1" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="32dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel2"
            android:id="@+id/but_cancel"
            style="@style/transparent_button"
            android:textColor="@color/color_black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:id="@+id/but_send"
            android:textColor="@color/text_color1"
            style="@style/transparent_button" />
    </TableRow>
</LinearLayout>