<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hm.viruchatel.UserInfoActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="@dimen/tool_bar_top_padding"
        android:transitionName="actionBar"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_user_name"
        android:hint="@string/fio"
        android:layout_marginTop="16dp"
        app:met_floatingLabel="normal"
        android:textColor="@color/text_color1"
        android:textColorHint="@color/text_color_gray" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/edit_user_phone"
            android:hint="@string/phone"
            android:layout_marginTop="56dp"
            app:met_floatingLabel="normal"
            android:textColor="@color/text_color1"
            android:textColorHint="@color/text_color_gray" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edit_user_mail"
            android:hint="@string/email"
            android:layout_marginTop="16dp"
            app:met_floatingLabel="normal"
            android:textColor="@color/text_color1"
            android:textColorHint="@color/text_color_gray" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/edit_user_city"
            android:hint="@string/city"
            android:layout_marginTop="56dp"
            app:met_floatingLabel="normal"
            android:textColor="@color/text_color1"
            android:textColorHint="@color/text_color_gray" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/edit_user_street"
            android:hint="@string/street"
            android:layout_marginTop="16dp"
            app:met_floatingLabel="normal"
            android:textColor="@color/text_color1"
            android:textColorHint="@color/text_color_gray" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/edit_user_house"
            android:hint="@string/house"
            android:layout_marginTop="16dp"
            app:met_floatingLabel="normal"
            android:textColor="@color/text_color1"
            android:textColorHint="@color/text_color_gray" />

        <TextView android:text="@string/user_info_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_gray"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>
</RelativeLayout>
