<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:id="@+id/textView17"
        android:gravity="left"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="16dp"
        android:textColor="@color/text_color_gray" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView16"
        android:src="@drawable/divider"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView15"
            android:src="@drawable/img_user_male" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_photo"
            android:id="@+id/textView18"
            android:layout_marginLeft="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color1" />
    </TableRow>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView17"
        android:src="@drawable/divider"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_data"
        android:id="@+id/textView19"
        android:layout_marginLeft="16dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color1"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView18"
        android:src="@drawable/divider"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_activity_change_pass"
        android:id="@+id/textView20"
        android:layout_marginLeft="16dp"
        android:textColor="@color/text_color1"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView19"
        android:src="@drawable/divider"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView21"
        android:src="@drawable/divider"
        android:paddingTop="32dp"
        android:paddingBottom="8dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/gps_tracer"
                android:id="@+id/textView21"
                android:layout_marginLeft="16dp"
                android:textColor="@color/text_color1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/gps_number_2"
                android:id="@+id/textView24"
                android:layout_marginLeft="16dp" />
        </LinearLayout>
    </TableRow>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView24"
        android:src="@drawable/divider"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/social_network"
        android:id="@+id/textView25"
        android:paddingLeft="16dp"
        android:paddingTop="32dp"
        android:textColor="@color/text_color_gray" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView20"
        android:src="@drawable/divider"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/link_fb_acc"
        android:id="@+id/textView22"
        android:layout_marginLeft="16dp"
        android:textColor="@color/text_color1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView22"
        android:src="@drawable/divider"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/link_vk_acc"
        android:id="@+id/textView23"
        android:layout_marginLeft="16dp"
        android:textColor="@color/text_color1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView23"
        android:src="@drawable/divider"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />


</LinearLayout>

</RelativeLayout>